# CMakeLists.txt

SET (about_UIS
  aboutdialog.ui
)

SET (about_SOURCES
  about.cpp
)

SET (about_HEADERS
  about.h
)

QT4_WRAP_UI (about_UIC ${about_UIS})

QT4_WRAP_CPP (about_MOC ${about_HEADERS})

QT4_ADD_RESOURCES (about_QRC about.qrc)

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_LIBRARY (About STATIC
  ${about_MOC}
  ${about_UIC}
  ${about_QRC}
  ${about_HEADERS}
  ${about_SOURCES}
)

REMOVE_DEFINITIONS (-DQT_DBUS_LIB -DQT_WEBKIT_LIB -DQT_XML_LIB -DQT_XMLPATTERNS_LIB)

SET_TARGET_PROPERTIES (About PROPERTIES
  LINKER_LANGUAGE CXX
  COMPILE_FLAGS "${LIB_FPIC_CXXFLAGS}"
)

TARGET_LINK_LIBRARIES (About
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
)

## EOF
