# CMakeLists.txt

SET (about_SOURCES
  about.cpp
  aboutdata.cpp
)

SET (about_HEADERS
  about.h
)

SET (about_NOMOC_HEADERS
  aboutdata.h
)

KDE4_MOC_HEADERS (about_MOC ${about_HEADERS})

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${XHTMLDBG_BINARY_PROJECT_INCULDE}
)

KDE4_ADD_LIBRARY (About STATIC
  ${about_MOC}
  ${about_HEADERS}
  ${about_NOMOC_HEADERS}
  ${about_SOURCES}
)

SET_TARGET_PROPERTIES (About PROPERTIES
  LINKER_LANGUAGE CXX
  COMPILE_FLAGS "${LIB_FPIC_CXXFLAGS}"
)

TARGET_LINK_LIBRARIES (About
  ${QT_QTCORE_LIBRARY}
  ${QT_QTGUI_LIBRARY}
  ${XHTMLDBG_KDE_LIBRARIES}
)

## EOF
